--- a/index.html
+++ b/index.html
@@ -7,64 +7,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-        .risk-high { background: #ffebee; color: #b71c1c; border-left: 8px solid #b71c1c; padding: 15px; border-radius: 5px; }
-        .btn-sol { background: #01579b; color: white; width: 100%; font-size: 1.1em; cursor: pointer; }
-        #report { background: white; color: #333; padding: 25px; border: 2px solid #01579b; border-radius: 10px; }
-        .lang-switch { text-align: right; margin-bottom: 10px; }
+        .lang-bar { background: #000; padding: 10px; display: flex; gap: 8px; justify-content: center; position: sticky; top: 0; z-index: 100; }
+        .lang-btn { cursor: pointer; border: 1px solid #ffd600; background: transparent; color: #ffd600; padding: 5px 10px; font-size: 0.8em; border-radius: 4px; }
+        .lang-btn:hover { background: #ffd600; color: #000; }
+        .btn-main { background: #01579b; color: white; width: 100%; font-weight: bold; margin-top: 10px; }
+        #report { background: white; color: black; padding: 20px; border: 1px solid #000; margin-top: 20px; }
     </style>
 </head>
 <body>
-    <div class="lang-switch">
-        <select id="langSelect" onchange="changeLanguage()">
-            <option value="en">English</option>
-            <option value="es" selected>Español</option>
-            <option value="fr">Français</option>
-            <option value="pt">Português</option>
-            <option value="zh">中文</option>
-        </select>
+    <div class="lang-bar">
+        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
+        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
+        <button class="lang-btn" onclick="setLang('fr')">FR 🇫🇷</button>
+        <button class="lang-btn" onclick="setLang('pt')">PT 🇧🇷</button>
+        <button class="lang-btn" onclick="setLang('zh')">ZH 🇨🇳</button>
     </div>
 
-    <div id="legalHeader" style="background:#000; color:#ffd600; padding:10px; text-align:center; font-weight:bold;">
-        PREVENTIVE LOGISTICS ADVISORY - TSA / IATA / DOT COMPLIANCE
-    </div>
+    <header style="text-align: center; padding: 20px;">
+        <h1 id="title">SmartCargo Advisor</h1>
+        <p id="subtitle">Logistics Compliance & Technical Solutions</p>
+    </header>
 
     <section id="access">
-        <h3 id="t1">1. Service Activation</h3>
-        <input type="text" name="awb" id="awbInput" placeholder="Air Waybill (AWB) / Reference">
-        <select id="priceSelect">
-            <option value="35">Basic Review - $35</option>
-            <option value="120">Premium Integral Advisory - $120</option>
-        </select>
-        <button id="payBtn" class="btn-sol">ACTIVATE ADVISOR</button>
+        <h3 id="t1">1. Activation</h3>
+        <input type="text" id="awbInput" placeholder="AWB / Reference">
+        <button id="payBtn" class="btn-main">ACTIVATE SYSTEM</button>
     </section>
 
-    <section id="mainApp" style="opacity: 0.3; pointer-events: none; transition: 0.5s;">
-        <h3 id="t2">2. Quick Compliance Check</h3>
-        <form id="auditForm">
-            <input type="number" name="h" id="hInput" placeholder="Height (cm)" required>
-            <label id="l1">ISPM-15 Wood Stamp?</label>
-            <select name="ispm"><option value="SI">YES</option><option value="NO">NO</option></select>
-            <label id="l2">Dangerous Goods (DG)?</label>
-            <select name="dg"><option value="NO">NO</option><option value="SI">YES</option></select>
-            <button type="submit" id="b1">CHECK LEGAL RULES</button>
-        </form>
-        <div id="auditResponse"></div>
-
-        <hr>
-        <h3 id="t3">3. Solution Center (Text or Photo)</h3>
-        <p id="p1">Describe the issue or upload up to 3 photos for a rectification plan.</p>
+    <section id="mainApp" style="opacity: 0.1; pointer-events: none;">
+        <h3 id="t2">2. Solution Center</h3>
+        <p id="p1">Describe your issue and/or upload up to 3 photos.</p>
         <form id="advForm">
-            <textarea name="prompt" id="promptInput" placeholder="Describe your situation here..." required></textarea>
-            <input type="file" name="images" id="fileInput" accept="image/*" multiple>
-            <button type="submit" class="btn-sol" id="b2" style="background:#2e7d32;">GENERATE ACTION PLAN</button>
+            <textarea name="prompt" id="promptInput" placeholder="Type here..." required></textarea>
+            <input type="file" name="images" accept="image/*" multiple>
+            <button type="submit" class="btn-main" style="background: #2e7d32;">GET SOLUTIONS</button>
         </form>
-        
         <div id="advResponse"></div>
         <div id="actionBtns" style="display:none; margin-top:15px;">
-            <button onclick="downloadPDF()" id="b3" style="background:#555;">📄 SAVE PDF</button>
-            <button onclick="shareWA()" id="b4" style="background:#25d366;">📱 SEND TO WHATSAPP</button>
+            <button onclick="downloadPDF()">PDF</button>
+            <button onclick="shareWA()" style="background:#25d366; color:white;">WhatsApp</button>
         </div>
     </section>
+
     <script src="app.js"></script>
 </body>
 </html>
