--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartCargo Advisor</title>
+    <title>SmartCargo Advisor 360°</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-        .lang-bar { background: #000; padding: 10px; display: flex; gap: 10px; justify-content: center; sticky; top: 0; z-index: 1000; }
-        .lang-btn { cursor: pointer; border: 1px solid #ffd600; background: transparent; color: #ffd600; padding: 5px 12px; border-radius: 4px; font-weight: bold; }
+        .lang-bar { background: #000; padding: 10px; display: flex; gap: 8px; justify-content: center; position: sticky; top: 0; z-index: 999; }
+        .lang-btn { cursor: pointer; border: 1px solid #ffd600; background: transparent; color: #ffd600; padding: 6px 12px; border-radius: 4px; font-weight: bold; }
         .lang-btn:hover { background: #ffd600; color: #000; }
-        #mainApp { transition: opacity 0.5s; margin-top: 20px; }
-        .btn-pay { background: #01579b; color: white; width: 100%; padding: 15px; font-size: 1.2em; font-weight: bold; cursor: pointer; border: none; border-radius: 8px; }
+        #mainApp { opacity: 0.1; pointer-events: none; transition: 0.5s; border-top: 2px solid #01579b; margin-top: 20px; }
+        .report-box { background: #fff; color: #000; padding: 20px; border: 2px solid #01579b; border-radius: 8px; margin-top: 15px; }
     </style>
 </head>
 <body>
     <div class="lang-bar">
-        <button class="lang-btn" onclick="setLang('en')">English 🇺🇸</button>
-        <button class="lang-btn" onclick="setLang('es')">Español 🇪🇸</button>
-        <button class="lang-btn" onclick="setLang('fr')">Français 🇫🇷</button>
-        <button class="lang-btn" onclick="setLang('pt')">Português 🇧🇷</button>
-        <button class="lang-btn" onclick="setLang('zh')">中文 🇨🇳</button>
+        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
+        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
+        <button class="lang-btn" onclick="setLang('fr')">FR 🇫🇷</button>
+        <button class="lang-btn" onclick="setLang('pt')">PT 🇧🇷</button>
+        <button class="lang-btn" onclick="setLang('zh')">ZH 🇨🇳</button>
     </div>
 
     <section id="accessSection">
-        <h2 id="t_act">1. Activación de Servicio</h2>
-        <input type="text" id="awbField" placeholder="Número de Guía (AWB) / Referencia">
-        <select id="servicePrice">
+        <h2 id="t_act">1. Service Activation</h2>
+        <input type="text" id="awbField" placeholder="AWB / Loading Reference">
+        <select id="priceSelect">
             <option value="35">Basic Review - $35</option>
             <option value="120">Premium Integral Advisory - $120</option>
         </select>
-        <button id="activateBtn" class="btn-pay">ACTIVATE ADVISOR / ACTIVAR ASESOR</button>
+        <button id="activateBtn" style="width:100%; background:#01579b; color:white; font-weight:bold;">ACTIVATE ADVISOR</button>
     </section>
 
-    <section id="mainApp" style="opacity: 0.1; pointer-events: none;">
-        <h2 id="t_sol">2. Centro de Soluciones</h2>
+    <section id="mainApp">
+        <h2 id="t_sol">2. Solution Center</h2>
+        <p id="p_desc">Describe the technical issue or upload up to 3 photos for immediate analysis.</p>
         <form id="advForm">
-            <textarea name="prompt" id="promptArea" placeholder="Escriba su consulta técnica..." required></textarea>
+            <textarea name="prompt" id="promptArea" placeholder="How can we help you move your cargo safely?" required></textarea>
+            <label>Inspection Photos (Max 3):</label>
             <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-            <button type="submit" class="btn-pay" style="background: #2e7d32;">GENERAR REPORTE</button>
+            <button type="submit" style="width:100%; background:#2e7d32; color:white;">GENERATE ACTION PLAN</button>
         </form>
         <div id="advResponse"></div>
-        <div id="actionBtns" style="display:none; margin-top: 20px; display: flex; gap: 10px;">
+        <div id="actionBtns" style="display:none; margin-top:20px; display:flex; gap:10px;">
             <button onclick="downloadPDF()" style="flex:1;">📄 PDF</button>
-            <button onclick="shareWA()" style="background:#25d366; color:white; flex:1;">WhatsApp</button>
+            <button onclick="shareWA()" style="flex:1; background:#25d366; color:white;">WhatsApp</button>
         </div>
     </section>
 
     <script src="app.js"></script>
+    <script src="legal_warning.js"></script>
+    <script src="standards.js"></script>
 </body>
 </html>
