--- a/index.html
+++ b/index.html
@@ -3,50 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMARTCARGO ADVISORY LLC | Global Compliance</title>
+    <title>SMARTCARGO ADVISORY LLC</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <style>
         :root { --blue: #002855; --gold: #ffd600; }
-        .hero { background: var(--blue); color: white; padding: 20px; text-align: center; border-radius: 0 0 20px 20px; }
-        .alert-red { border-left: 10px solid #d32f2f; background: #fff5f5; padding: 15px; margin: 10px 0; color: #b71c1c; }
-        .alert-green { border-left: 10px solid #2e7d32; background: #f1f8f1; padding: 15px; margin: 10px 0; color: #1b5e20; }
-        #mainApp { opacity: 0; pointer-events: none; transition: 0.5s; }
-        #timerBox { background: #ffeb3b; color: #000; font-weight: bold; padding: 5px; text-align: center; display: none; }
+        .lang-bar { background: #000; padding: 10px; text-align: center; position: sticky; top: 0; z-index: 1000; }
+        .lang-btn { cursor: pointer; border: 1px solid var(--gold); background: transparent; color: var(--gold); padding: 5px 10px; margin: 0 5px; font-weight: bold; }
+        .hero { background: var(--blue); color: white; padding: 25px; text-align: center; }
+        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; border-radius: 8px; font-size: 0.8em; margin-bottom: 20px; }
+        .benefit-card { background: #f0f4f8; border-left: 5px solid var(--gold); padding: 15px; margin: 10px 0; }
+        #mainApp { display: none; }
     </style>
 </head>
 <body>
-    <div id="timerBox">Sesión Protegida: 5:00</div>
+    <div class="lang-bar">
+        <button class="lang-btn" onclick="changeLang('es')">ESPAÑOL 🇪🇸</button>
+        <button class="lang-btn" onclick="changeLang('en')">ENGLISH 🇺🇸</button>
+        <button class="lang-btn" onclick="changeLang('pt')">PORTUGUÊS 🇧🇷</button>
+    </div>
 
     <div class="hero">
-        <h2 style="color:var(--gold); margin:0;">SMARTCARGO ADVISORY LLC</h2>
-        <p>Expertos Globales en Carga Aérea, Marítima y Terrestre</p>
+        <h1 id="h_title">SMARTCARGO ADVISORY LLC</h1>
+        <p id="h_subtitle">Consultoría Técnica Independiente en Logística</p>
     </div>
 
     <section id="accessSection">
-        <h3>🌍 Activación Global de Asesoría</h3>
-        <p style="font-size:0.85em;">Nuestras soluciones cubren regulaciones de Florida y el resto del mundo.</p>
-        <input type="text" id="awbField" placeholder="AWB / B.L. / Número de Referencia">
+        <div class="shield-box">
+            <strong id="l_aviso">AVISO LEGAL DE BLINDAJE:</strong>
+            <p id="l_desc">SMARTCARGO ADVISORY LLC es una firma de consultoría privada. NO somos una agencia del gobierno, NO somos TSA, IATA, DOT ni IMO. NO poseemos licencia de DG ni manejamos carga físicamente. Nuestra función es asesorar técnicamente para evitar errores de estiba y documentación. Al usar este sistema, usted acepta que nuestras soluciones son sugerencias de cumplimiento preventivo.</p>
+        </div>
+
+        <h3 id="b_title">¿Por qué usar nuestro Asesor?</h3>
+        <div class="benefit-card" id="b1">✅ <strong>Evite "Holds":</strong> No deje que su carga se detenga en Miami o cualquier puerto del mundo.</div>
+        <div class="benefit-card" id="b2">✅ <strong>Ahorre Dinero:</strong> Prevenga multas por mal pesaje o estiba incorrecta.</div>
+        <div class="benefit-card" id="b3">✅ <strong>Eficiencia:</strong> Camioneros y Forwarders pasan el counter sin rechazos.</div>
+
+        <hr>
+        <h3 id="p_title">Activar Servicio</h3>
+        <input type="text" id="awbField" placeholder="AWB / B.L. / Referencia">
         <select id="priceSelect">
-            <option value="5">Micro-Envío (Económico) - $5.00</option>
+            <option value="5">Carga Micro - $5.00</option>
             <option value="15">Driver Check (Terrestre) - $15.00</option>
             <option value="35">Estándar Profesional - $35.00</option>
-            <option value="95">Auditoría Global Premium - $95.00</option>
+            <option value="95">Auditoría Premium - $95.00</option>
         </select>
-        <button id="activateBtn" style="width:100%; background:var(--gold); color:black; font-weight:bold;">DESBLOQUEAR ASESOR</button>
+        <button id="activateBtn" style="width:100%; background:var(--gold); color:black; font-weight:bold;">ACTIVAR AHORA</button>
     </section>
 
     <section id="mainApp">
-        <h3 style="color:var(--blue);">Centro de Soluciones Inteligentes</h3>
+        <h3 id="app_title">Centro de Soluciones Globales</h3>
         <form id="advForm">
             <select name="cargo_type" id="cargoType">
-                <option value="air">Aéreo (IATA / TSA)</option>
-                <option value="ocean">Marítimo (IMO / Puertos)</option>
-                <option value="land">Terrestre (DOT / Locales)</option>
+                <option value="air">Aéreo</option>
+                <option value="ocean">Marítimo</option>
+                <option value="land">Terrestre</option>
             </select>
-            <textarea name="prompt" id="promptArea" placeholder="Escriba su consulta. (Ej: 'Necesito revisar esta estiba para Australia')" required></textarea>
-            <label>Suba fotos para análisis visual (Máx 3):</label>
+            <textarea name="prompt" id="promptArea" placeholder="Describa el problema o suba fotos..." required></textarea>
             <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-            <button type="submit" style="width:100%; background:#2e7d32; color:white; font-weight:bold;">OBTENER RESULTADO TÉCNICO</button>
+            <button type="submit" style="width:100%; background:#2e7d32; color:white;">ANALIZAR CARGA</button>
         </form>
         <div id="advResponse"></div>
     </section>
