--- a/index.html
+++ b/index.html
@@ -3,51 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMARTCARGO ADVISORY LLC</title>
+    <title>SMARTCARGO by MAY ROGA LLC</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <style>
         :root { --blue: #002855; --gold: #ffd600; }
-        .lang-bar { background: #000; padding: 10px; text-align: center; position: sticky; top: 0; z-index: 1000; border-bottom: 2px solid var(--gold); }
-        .lang-btn { cursor: pointer; border: 1px solid var(--gold); background: transparent; color: var(--gold); padding: 5px 8px; margin: 2px; font-weight: bold; border-radius: 4px; }
-        .hero { background: var(--blue); color: white; padding: 25px; text-align: center; border-radius: 0 0 20px 20px; }
-        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; border-radius: 8px; font-size: 0.85em; margin: 20px 0; color: #444; }
+        .lang-bar { background: #000; padding: 15px; text-align: center; position: sticky; top: 0; z-index: 1000; border-bottom: 2px solid var(--gold); display: flex; justify-content: center; flex-wrap: wrap; gap: 5px; }
+        .lang-btn { cursor: pointer; border: 1px solid var(--gold); background: transparent; color: var(--gold); padding: 5px 12px; font-weight: bold; border-radius: 4px; transition: 0.3s; }
+        .lang-btn:hover { background: var(--gold); color: black; }
+        .hero { background: var(--blue); color: white; padding: 30px; text-align: center; border-radius: 0 0 20px 20px; }
+        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; border-radius: 8px; font-size: 0.9em; margin: 20px 0; color: #333; }
         .benefit-card { background: #f0f4f8; border-left: 5px solid var(--gold); padding: 15px; margin: 10px 0; }
         #mainApp { display: none; }
-        .legal-footer { margin-top: 20px; padding: 10px; border-top: 2px solid #000; font-size: 0.75em; background: #eee; color: #333; }
+        .legal-footer { margin-top: 25px; padding: 15px; border-top: 2px solid #000; font-size: 0.8em; background: #f9f9f9; line-height: 1.4; }
     </style>
 </head>
 <body>
     <div class="lang-bar">
-        <button class="lang-btn" onclick="changeLang('en')">EN 🇺🇸</button>
-        <button class="lang-btn" onclick="changeLang('es')">ES 🇪🇸</button>
-        <button class="lang-btn" onclick="changeLang('pt')">PT 🇧🇷</button>
-        <button class="lang-btn" onclick="changeLang('zh')">ZH 🇨🇳</button>
-        <button class="lang-btn" onclick="changeLang('fr')">FR 🇫🇷</button>
-        <button class="lang-btn" onclick="changeLang('hi')">HI 🇮🇳</button>
+        <button class="lang-btn" onclick="changeLang('en')">English 🇺🇸</button>
+        <button class="lang-btn" onclick="changeLang('es')">Español 🇪🇸</button>
+        <button class="lang-btn" onclick="changeLang('pt')">Português 🇧🇷</button>
+        <button class="lang-btn" onclick="changeLang('zh')">中文 🇨🇳</button>
+        <button class="lang-btn" onclick="changeLang('fr')">Français 🇫🇷</button>
+        <button class="lang-btn" onclick="changeLang('hi')">हिन्दी 🇮🇳</button>
     </div>
 
     <div class="hero">
-        <h1 id="h_title">SMARTCARGO ADVISORY LLC</h1>
-        <p id="h_subtitle">Independent Technical Logistics Consulting</p>
+        <h1 id="h_title">SMARTCARGO ADVISORY</h1>
+        <p id="h_subtitle">Technical Consulting by MAY ROGA LLC</p>
     </div>
 
     <section id="accessSection">
         <div class="shield-box">
             <strong id="l_aviso">LEGAL SHIELD NOTICE:</strong>
-            <p id="l_desc">SMARTCARGO ADVISORY LLC is a private consulting firm. We are NOT a government agency (TSA, IATA, DOT, IMO). We do not hold DG licenses nor handle cargo physically. Advice provided consists of suggestions for preventive compliance.</p>
+            <p id="l_desc">MAY ROGA LLC is a private consulting firm. We are NOT a government agency, NOT TSA, IATA, DOT, or IMO. We do not hold DG licenses nor handle cargo physically. Our role is to provide technical advice to prevent errors. By using this system, you accept our solutions as preventive suggestions.</p>
         </div>
 
-        <h3 id="b_title">Why Use Our Advisory?</h3>
-        <div class="benefit-card" id="b1">✅ Avoid Holds: Ensure smooth movement in any global hub.</div>
-        <div class="benefit-card" id="b2">✅ Save Money: Prevent costly storage and rejections.</div>
+        <h3 id="b_title">Why use our Advisor?</h3>
+        <div id="b_list">
+            <div class="benefit-card">✅ <strong>Avoid Holds:</strong> Don't let your cargo stop at any global hub.</div>
+            <div class="benefit-card">✅ <strong>Save Money:</strong> Prevent costly storage and rejections.</div>
+        </div>
 
         <hr>
         <h3 id="p_title">Activate Professional Service</h3>
-        <input type="text" id="awbField" placeholder="Reference (AWB, B/L, etc.)">
+        <input type="text" id="awbField" placeholder="AWB / B.L. / Reference">
         <select id="priceSelect">
             <option value="5">Micro Load - $5.00</option>
             <option value="15">Driver Check - $15.00</option>
-            <option value="35">Standard Pro - $35.00</option>
+            <option value="35">Professional Standard - $35.00</option>
             <option value="95">Premium Audit - $95.00</option>
         </select>
         <button id="activateBtn" style="width:100%; background:var(--gold); color:black; font-weight:bold;">ACTIVATE NOW</button>
@@ -57,13 +60,13 @@
         <h3 id="app_title">Global Solution Center</h3>
         <form id="advForm">
             <select name="cargo_type" id="cargoType">
-                <option value="air">Air (IATA/TSA)</option>
-                <option value="ocean">Ocean (IMO/FMC)</option>
-                <option value="land">Ground (DOT/FMCSA)</option>
+                <option value="air">Air</option>
+                <option value="ocean">Ocean</option>
+                <option value="land">Ground</option>
             </select>
-            <textarea name="prompt" id="promptArea" placeholder="Describe the issue or upload photos..." required></textarea>
+            <textarea name="prompt" id="promptArea" placeholder="Describe the problem or upload photos..." required></textarea>
             <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-            <button type="submit" style="width:100%; background:#2e7d32; color:white; font-weight:bold;">ANALYZE NOW</button>
+            <button type="submit" style="width:100%; background:#2e7d32; color:white;">GENERATE ADVICE</button>
         </form>
         <div id="advResponse"></div>
     </section>
