--- a/index.html
+++ b/index.html
@@ -2,57 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartCargo ADVISORY BY MAY ROGA LLC</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <style>
         :root { --blue: #002855; --gold: #ffd600; }
-        .lang-bar { background: #000; padding: 12px; text-align: center; border-bottom: 2px solid var(--gold); }
-        .lang-btn { cursor:pointer; background:none; color:var(--gold); border:1px solid var(--gold); margin:2px; padding:4px 10px; font-weight:bold; border-radius:4px; }
         .hero { background: var(--blue); color: white; padding: 25px; text-align: center; }
-        .shield { background: #fff3e0; border: 2px solid #e65100; padding: 15px; margin: 20px 0; font-size: 0.85em; color: #000; }
+        .promo-card { background: #e3f2fd; border-radius: 8px; padding: 20px; margin: 20px 0; border-left: 6px solid #1976d2; }
+        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; font-size: 0.85em; margin-bottom: 20px; }
         #appSection { display: none; }
-        .report-out { border: 2px solid #000; padding: 20px; background: #fff; margin-top: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .report-frame { border: 2px solid #333; padding: 25px; background: white; margin-top: 20px; }
     </style>
 </head>
 <body>
-    <div class="lang-bar">
-        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
-        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
-        <button class="lang-btn" onclick="setLang('zh')">ZH 🇨🇳</button>
-        <button class="lang-btn" onclick="setLang('hi')">HI 🇮🇳</button>
-        <button class="lang-btn" onclick="setLang('fr')">FR 🇫🇷</button>
-        <button class="lang-btn" onclick="setLang('pt')">PT 🇧🇷</button>
-    </div>
-
     <div class="hero">
         <h1 id="h-title">SmartCargo ADVISORY</h1>
-        <p>Technical Consulting BY <strong>MAY ROGA LLC</strong></p>
+        <p>Technical Compliance BY <strong>MAY ROGA LLC</strong></p>
+        <button onclick="setLang('en')">ENGLISH 🇺🇸</button> <button onclick="setLang('es')">ESPAÑOL 🇪🇸</button>
     </div>
 
     <div id="authSection">
-        <div class="shield">
-            <h4 id="l-title">⚠️ Legal Notice</h4>
-            <p id="l-desc">Virtual preventive advisor for air and maritime cargo (Does NOT certify, Does NOT inspect, Does NOT replace regulators). Developed to protect the customer's merchandise through analysis, predictions, and 100% automatic alerts. MAY ROGA LLC is a private consulting firm. Information is orientative.</p>
+        <div class="promo-card">
+            <h3 id="m-title">¿Por qué SmartCargo?</h3>
+            <p id="m-desc">En <strong>MAY ROGA LLC</strong>, aportamos estabilidad al comercio global. Este sistema previene rechazos de carga, multas de TSA/IATA y daños materiales, permitiendo que todos los actores de la cadena contribuyan a un transporte seguro y exitoso.</p>
         </div>
-        <p id="p-text">Select service to activate:</p>
-        <select id="price">
-            <option value="5">Micro Load Audit - $5.00</option>
-            <option value="15">Driver Quick-Check - $15.00</option>
-            <option value="35">Professional Technical Audit - $35.00</option>
+
+        <div class="shield-box">
+            <h4 id="l-title">⚠️ Blindaje Legal Obligatorio</h4>
+            <p id="l-desc">Este es un asesor preventivo virtual. MAY ROGA LLC NO es una entidad gubernamental, NO certifica mercancías peligrosas y NO reemplaza las inspecciones de TSA, IATA o Aduanas. Nuestra función es asesoría técnica basada en normativas vigentes para minimizar riesgos de rechazo.</p>
+        </div>
+
+        <h3 id="a-title">Activar Asesoría</h3>
+        <select id="priceSelect">
+            <option value="5">Carga Pequeña (Micro) - $5.00</option>
+            <option value="15">Control de Chofer (Standard) - $15.00</option>
+            <option value="35">Auditoría Técnica (Full) - $35.00</option>
         </select>
-        <button id="btn-activate" onclick="activate()" style="width:100%; background:var(--gold); color:black; font-weight:bold;">ACTIVATE NOW</button>
+        <button onclick="pay()" style="width:100%; background:var(--gold); color:black; font-weight:bold;">PAGAR Y ACTIVAR</button>
+
+        <div style="margin-top:40px; opacity:0.7;">
+            <p>Acceso Privado MAY ROGA:</p>
+            <input type="text" id="user" placeholder="User" style="width:40%">
+            <input type="password" id="pass" placeholder="Pass" style="width:40%">
+            <button onclick="adminLogin()">Login</button>
+        </div>
     </div>
 
     <div id="appSection">
         <form id="cargoForm">
-            <textarea id="prompt" placeholder="Describe the cargo problem OR upload photos..." required></textarea>
-            <label>Upload up to 3 inspection photos:</label>
+            <textarea id="prompt" placeholder="Describa su carga o dudas legales (IATA, TSA, etc)..." required></textarea>
+            <p>Suba hasta 3 fotos de estiba o etiquetas:</p>
             <input type="file" id="pics" multiple accept="image/*">
-            <button id="btn-submit" type="submit" style="width:100%; background:#2e7d32; color:white; font-weight:bold;">GET ANALYSIS</button>
+            <button type="submit" style="width:100%; background:#2e7d32; color:white;">GENERAR INFORME TÉCNICO</button>
         </form>
         <div id="result"></div>
     </div>
-
     <script src="app.js"></script>
 </body>
 </html>
